# Solamatch

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  report.txt
api/: package-lock.json  package.json  tsconfig.json
api/src/: indexer.ts  routes.ts  server.ts  types.ts
client/: cli.ts  package-lock.json  package.json  tsconfig.json
crank/: package.json
crank/src/: crank.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  assets.d.ts  index.css  main.tsx
frontend/src/components/: LoadingScreen.tsx
frontend/src/pages/: LandingPage.tsx  TradingPage.tsx
programs/order-matching-engine/: Cargo.toml
programs/order-matching-engine/src/: errors.rs  events.rs  lib.rs  state.rs
tests/: order-matching-engine.ts
